manifests/analytics-service/local/dynamodb-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb-local
  namespace: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb-local
  template:
    metadata:
      labels:
        app: dynamodb-local
    spec:
      containers:
        - name: dynamodb-local
          image: amazon/dynamodb-local:latest
          ports:
            - containerPort: 8000
          command: ["java", "-jar", "DynamoDBLocal.jar", "-sharedDb"]
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-local
  namespace: analytics-service
spec:
  selector:
    app: dynamodb-local
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
